--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,21 @@
 :root {
-	--main-font: 2em Georgia, 'Times New Roman', Times, serif;
+	--main-font-large: bold 3em Georgia, 'Times New Roman', Times, serif;
+	--main-font-small: bold 1.25em Georgia, 'Times New Roman', Times, serif;
+	--main-font: normal 1.75em Georgia, 'Times New Roman', Times, serif;
 
 	--light-color: #fff;
 	--dark-color: #000;
 	--primary-color: lightgrey;
 	--danger-color: red;
+
+	--size-m: 1rem;
+	--size-s: .5rem;
+	--size-xs: .25rem;
+
+	--extra-large-spacing: calc(var(--size-m) * 2);
+	--large-spacing: var(--size-m);
+	--base-spacing: var(--size-s);
+	--small-spacing: var(--size-xs);
 }
 
 * {
@@ -16,74 +27,128 @@
 body {
 	max-width: 100vw;
 	min-height: 100vh;
-	font: var(--main-font);
 	color: var(--dark-color);
 	background: var(--light-color);
 }
 
-.container {
+div.container {
 	margin: auto;
-	width: 100%;
 	height: 100%;
-	min-height: 100vh;
-}
-
-.scroll_down--box,
-.scroll_slide--box,
-.scroll_up--box {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	gap: 10px;
 }
 
-.scroll_slide--box {
-	width: 90%;
-	height: 100%;
-	min-height: 70vh;
-	height: 300px;
-	justify-content: space-between;
-}
-
-.scroll_slide--box__left {
-	height: 100%;
-}
-
-.scroll_slide--box__right {
-	height: 100%;
-	display: flex;
-	align-items: flex-end;
-}
-
-.scroll_down--box,
-.scroll_up--box {
+div.scroll_down--box,
+div.scroll_up--box {
+	width: 100%;
+	min-width: 100%;
+	min-height: 100vh;
 	background-color: var(--primary-color);
 }
 
-:is(.scroll_down--text, .scroll_up--text):hover {
+div.scroll_down--box {
+	padding: 30% 0 0 0;
+}
+
+div.scroll_up--box {
+	padding: 0 0 30% 0;
+}
+
+div.scroll_slide--box {
+	padding: var(--extra-large-spacing) 0 0 0;
+	width: 90%;
+	max-width: 1000px;
+	min-height: 50vh;
+	height: 450px;
+	display: flex;
+	justify-content: space-between;
+}
+
+div.scroll_slide--box__left,
+div.scroll_slide--box__right {
+	width: 100%;
+	height: 100%;
+}
+
+div.scroll_slide--box__right {
+	display: flex;
+	justify-content: flex-end;
+	align-items: flex-end;
+}
+
+div.scroll_slide--box__right>a {
+	font-size: 0%;
+}
+
+h2.scroll_down--text {
+	font: var(--main-font-small);
+}
+
+h2.scroll_up--text {
+	font: var(--main-font-large);
+}
+
+:is(h2.scroll_down--text, h2.scroll_up--text):hover {
 	color: var(--danger-color);
 	transition: all ease-in-out 0.2s;
 	cursor: pointer;
 }
 
-.scroll_slide--text {
-	margin: .5rem 0 0 0;
-	font-size: 50%;
+h2.scroll_slide--text {
+	margin: var(--base-spacing) 0 0 0;
+	font: var(--main-font);
 }
 
-.scroll_slide--line {
-	margin: .5rem 0 0 0;
+div.scroll_slide--line {
+	margin: var(--base-spacing) 0 0 0;
 	width: 150px;
 	height: 3px;
 	background-color: var(--danger-color);
 }
 
-.scroll_slide--image {
-	width: 420px;
+img.scroll_slide--image {
+	width: 300px;
 }
 
 @media all and (max-width: 680px) {
-	.container {
+	div.container {
 		flex-direction: column;
+	}
+
+	div.scroll_down--box,
+	div.scroll_up--box {
+		padding: 20% 0;
+	}
+
+	div.scroll_slide--box {
+		padding: var(--base-spacing) 0 0 0;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	div.scroll_slide--box__left,
+	div.scroll_slide--box__right {
+		width: 100%;
+		text-align: center;
+	}
+
+	div.scroll_slide--box__right {
+		justify-content: center;
+		align-items: center;
+	}
+
+	h2.scroll_down--text,
+	h2.scroll_up--text,
+	h2.scroll_slide--text {
+		text-align: center;
+	}
+
+	div.scroll_slide--line {
+		margin: var(--base-spacing) auto;
+	}
+
+	img.scroll_slide--image {
+		width: 80%;
 	}
 }
