--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,6 @@
 :root {
-	--main-font-large: bold 3em Georgia, 'Times New Roman', Times, serif;
-	--main-font-small: bold 1.25em Georgia, 'Times New Roman', Times, serif;
-	--main-font: normal 1.75em Georgia, 'Times New Roman', Times, serif;
+	--main-font: bold 1em Georgia, 'Times New Roman', Times, serif;
+	--slide-font: normal 1.75em Georgia, 'Times New Roman', Times, serif;
 
 	--light-color: #fff;
 	--dark-color: #000;
@@ -21,7 +20,8 @@
 * {
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 }
 
 body {
@@ -33,10 +33,16 @@ body {
 
 div.container {
 	margin: auto;
-	height: 100%;
+	height: 100vh;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 }
 
 div.scroll_down--box,
@@ -45,24 +51,21 @@ div.scroll_up--box {
 	min-width: 100%;
 	min-height: 100vh;
 	background-color: var(--primary-color);
-}
-
-div.scroll_down--box {
 	padding: 30% 0 0 0;
-}
-
-div.scroll_up--box {
-	padding: 0 0 30% 0;
 }
 
 div.scroll_slide--box {
 	padding: var(--extra-large-spacing) 0 0 0;
 	width: 90%;
-	max-width: 1000px;
+	max-width: 800px;
 	min-height: 50vh;
 	height: 450px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 }
 
 div.scroll_slide--box__left,
@@ -72,32 +75,37 @@ div.scroll_slide--box__right {
 }
 
 div.scroll_slide--box__right {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: flex-end;
-	align-items: flex-end;
+	-webkit-box-pack: end;
+	    -ms-flex-pack: end;
+	        justify-content: flex-end;
+	-webkit-box-align: end;
+	    -ms-flex-align: end;
+	        align-items: flex-end;
 }
 
 div.scroll_slide--box__right>a {
 	font-size: 0%;
 }
 
-h2.scroll_down--text {
-	font: var(--main-font-small);
-}
-
+h2.scroll_down--text,
 h2.scroll_up--text {
-	font: var(--main-font-large);
+	font: var(--main-font);
 }
 
 :is(h2.scroll_down--text, h2.scroll_up--text):hover {
 	color: var(--danger-color);
+	-webkit-transition: all ease-in-out 0.2s;
+	-o-transition: all ease-in-out 0.2s;
 	transition: all ease-in-out 0.2s;
 	cursor: pointer;
 }
 
 h2.scroll_slide--text {
 	margin: var(--base-spacing) 0 0 0;
-	font: var(--main-font);
+	font: var(--slide-font);
 }
 
 div.scroll_slide--line {
@@ -111,20 +119,27 @@ img.scroll_slide--image {
 	width: 300px;
 }
 
-@media all and (max-width: 680px) {
-	div.container {
-		flex-direction: column;
+/* Media Queries */
+
+/* Mobile */
+@media only screen and (max-width: 767px) {
+	div.scroll_down--box {
+		padding: 50% 0 0 0;
 	}
 
-	div.scroll_down--box,
 	div.scroll_up--box {
-		padding: 20% 0;
+		padding: 0 0 50% 0;
 	}
 
 	div.scroll_slide--box {
 		padding: var(--base-spacing) 0 0 0;
-		flex-direction: column;
-		align-items: center;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
 	}
 
 	div.scroll_slide--box__left,
@@ -134,8 +149,12 @@ img.scroll_slide--image {
 	}
 
 	div.scroll_slide--box__right {
-		justify-content: center;
-		align-items: center;
+		-webkit-box-pack: center;
+		    -ms-flex-pack: center;
+		        justify-content: center;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
 	}
 
 	h2.scroll_down--text,
@@ -145,10 +164,123 @@ img.scroll_slide--image {
 	}
 
 	div.scroll_slide--line {
-		margin: var(--base-spacing) auto;
+		margin: auto;
 	}
 
 	img.scroll_slide--image {
 		width: 80%;
+	}
+}
+
+/* Tablet */
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+	div.scroll_down--box {
+		padding: 35% 0 0 0;
+	}
+
+	div.scroll_up--box {
+		padding: 0 0 35% 0;
+	}
+
+	div.scroll_slide--box {
+		padding: var(--extra-large-spacing) 0 0 0;
+		width: 80%;
+	}
+
+	div.scroll_slide--box__left,
+	div.scroll_slide--box__right {
+		width: 50%;
+	}
+
+	div.scroll_slide--box__right {
+		-webkit-box-pack: end;
+		    -ms-flex-pack: end;
+		        justify-content: flex-end;
+		-webkit-box-align: end;
+		    -ms-flex-align: end;
+		        align-items: flex-end;
+	}
+
+	div.scroll_slide--box__right>a {
+		font-size: 0%;
+	}
+
+	h2.scroll_down--text,
+	h2.scroll_up--text {
+		font: var(--main-font);
+	}
+
+	h2.scroll_slide--text {
+		margin: var(--base-spacing) 0 0 0;
+		font: var(--slide-font);
+	}
+
+	div.scroll_slide--line {
+		margin: var(--base-spacing) 0 0 0;
+		width: 100px;
+		height: 3px;
+		background-color: var(--danger-color);
+	}
+
+	img.scroll_slide--image {
+		width: 300px;
+	}
+}
+
+/* Desktop */
+@media only screen and (min-width: 1025px) {
+	div.scroll_down--box {
+		padding: 40% 0 0 0;
+	}
+
+	div.scroll_up--box {
+		padding: 0 0 40% 0;
+	}
+
+	div.scroll_slide--box {
+		padding: var(--extra-large-spacing) 0 0 0;
+		width: 90%;
+	}
+
+	div.scroll_slide--box__left,
+	div.scroll_slide--box__right {
+		width: 100%;
+	}
+
+	div.scroll_slide--box__right {
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-pack: end;
+		    -ms-flex-pack: end;
+		        justify-content: flex-end;
+		-webkit-box-align: end;
+		    -ms-flex-align: end;
+		        align-items: flex-end;
+	}
+
+	div.scroll_slide--box__right>a {
+		font-size: 0%;
+	}
+
+	h2.scroll_down--text,
+	h2.scroll_up--text {
+		font: var(--main-font);
+	}
+
+	h2.scroll_slide--text {
+		margin: var(--base-spacing) 0 0 0;
+		font: var(--slide-font);
+	}
+
+	div.scroll_slide--line {
+		margin: var(--base-spacing) 0 0 0;
+		width: 150px;
+		height: 3px;
+		background-color: var(--danger-color);
+	}
+
+	img.scroll_slide--image {
+		width: 300px;
 	}
 }
