--- a/styles/style.css
+++ b/styles/style.css
@@ -31,9 +31,13 @@ body {
 	background: var(--light-color);
 }
 
+section.scroll {
+	width: 100%;
+	height: 100%;
+}
+
 div.container {
 	margin: auto;
-	height: 100vh;
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
@@ -43,26 +47,21 @@ div.container {
 	-webkit-box-align: center;
 	    -ms-flex-align: center;
 	        align-items: center;
+	-webkit-transition: font-size 0.3s ease;
+	-o-transition: font-size 0.3s ease;
+	transition: font-size 0.3s ease;
 }
 
 div.scroll_down--box,
 div.scroll_up--box {
 	width: 100%;
-	min-width: 100%;
-	min-height: 100vh;
+	height: 600px;
 	background-color: var(--primary-color);
-	padding: 30% 0 0 0;
 }
 
 div.scroll_slide--box {
 	padding: var(--extra-large-spacing) 0 0 0;
 	width: 90%;
-	max-width: 800px;
-	min-height: 50vh;
-	height: 450px;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
 	-webkit-box-pack: justify;
 	    -ms-flex-pack: justify;
 	        justify-content: space-between;
@@ -86,9 +85,9 @@ div.scroll_slide--box__right {
 	        align-items: flex-end;
 }
 
-div.scroll_slide--box__right>a {
+/* div.scroll_slide--box__right>a {
 	font-size: 0%;
-}
+} */
 
 h2.scroll_down--text,
 h2.scroll_up--text {
@@ -97,32 +96,26 @@ h2.scroll_up--text {
 
 :is(h2.scroll_down--text, h2.scroll_up--text):hover {
 	color: var(--danger-color);
-	-webkit-transition: all ease-in-out 0.2s;
-	-o-transition: all ease-in-out 0.2s;
-	transition: all ease-in-out 0.2s;
+	-webkit-transition: color ease 0.3s;
+	-o-transition: color ease 0.3s;
+	transition: color ease 0.3s;
 	cursor: pointer;
 }
 
 h2.scroll_slide--text {
-	margin: var(--base-spacing) 0 0 0;
 	font: var(--slide-font);
 }
 
 div.scroll_slide--line {
 	margin: var(--base-spacing) 0 0 0;
-	width: 150px;
 	height: 3px;
 	background-color: var(--danger-color);
-}
-
-img.scroll_slide--image {
-	width: 300px;
 }
 
 /* Media Queries */
 
 /* Mobile */
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 679px) {
 	div.scroll_down--box {
 		padding: 50% 0 0 0;
 	}
@@ -132,7 +125,8 @@ img.scroll_slide--image {
 	}
 
 	div.scroll_slide--box {
-		padding: var(--base-spacing) 0 0 0;
+		max-width: 600px;
+		height: 350px;
 		-webkit-box-orient: vertical;
 		-webkit-box-direction: normal;
 		    -ms-flex-direction: column;
@@ -142,19 +136,10 @@ img.scroll_slide--image {
 		        align-items: center;
 	}
 
-	div.scroll_slide--box__left,
-	div.scroll_slide--box__right {
-		width: 100%;
-		text-align: center;
-	}
-
 	div.scroll_slide--box__right {
 		-webkit-box-pack: center;
 		    -ms-flex-pack: center;
 		        justify-content: center;
-		-webkit-box-align: center;
-		    -ms-flex-align: center;
-		        align-items: center;
 	}
 
 	h2.scroll_down--text,
@@ -163,17 +148,22 @@ img.scroll_slide--image {
 		text-align: center;
 	}
 
+	h2.scroll_slide--text {
+		font-size: 1.25em;
+	}
+
 	div.scroll_slide--line {
-		margin: auto;
+		margin: var(--base-spacing) auto 0;
+		width: 70px;
 	}
 
 	img.scroll_slide--image {
-		width: 80%;
+		width: 250px;
 	}
 }
 
 /* Tablet */
-@media only screen and (min-width: 768px) and (max-width: 1024px) {
+@media only screen and (min-width: 680px) and (max-width: 1023px) {
 	div.scroll_down--box {
 		padding: 35% 0 0 0;
 	}
@@ -182,44 +172,18 @@ img.scroll_slide--image {
 		padding: 0 0 35% 0;
 	}
 
+	div.scroll_down--box,
+	div.scroll_up--box {
+		height: 700px;
+	}
+
 	div.scroll_slide--box {
-		padding: var(--extra-large-spacing) 0 0 0;
-		width: 80%;
-	}
-
-	div.scroll_slide--box__left,
-	div.scroll_slide--box__right {
-		width: 50%;
-	}
-
-	div.scroll_slide--box__right {
-		-webkit-box-pack: end;
-		    -ms-flex-pack: end;
-		        justify-content: flex-end;
-		-webkit-box-align: end;
-		    -ms-flex-align: end;
-		        align-items: flex-end;
-	}
-
-	div.scroll_slide--box__right>a {
-		font-size: 0%;
-	}
-
-	h2.scroll_down--text,
-	h2.scroll_up--text {
-		font: var(--main-font);
-	}
-
-	h2.scroll_slide--text {
-		margin: var(--base-spacing) 0 0 0;
-		font: var(--slide-font);
+		max-width: 960px;
+		height: 400px;
 	}
 
 	div.scroll_slide--line {
-		margin: var(--base-spacing) 0 0 0;
-		width: 100px;
-		height: 3px;
-		background-color: var(--danger-color);
+		width: 90px;
 	}
 
 	img.scroll_slide--image {
@@ -228,59 +192,25 @@ img.scroll_slide--image {
 }
 
 /* Desktop */
-@media only screen and (min-width: 1025px) {
+@media only screen and (min-width: 1024px) {
 	div.scroll_down--box {
-		padding: 40% 0 0 0;
+		padding: 20% 0 0 0;
 	}
 
 	div.scroll_up--box {
-		padding: 0 0 40% 0;
+		padding: 0 0 20% 0;
 	}
 
 	div.scroll_slide--box {
-		padding: var(--extra-large-spacing) 0 0 0;
-		width: 90%;
-	}
-
-	div.scroll_slide--box__left,
-	div.scroll_slide--box__right {
-		width: 100%;
-	}
-
-	div.scroll_slide--box__right {
-		display: -webkit-box;
-		display: -ms-flexbox;
-		display: flex;
-		-webkit-box-pack: end;
-		    -ms-flex-pack: end;
-		        justify-content: flex-end;
-		-webkit-box-align: end;
-		    -ms-flex-align: end;
-		        align-items: flex-end;
-	}
-
-	div.scroll_slide--box__right>a {
-		font-size: 0%;
-	}
-
-	h2.scroll_down--text,
-	h2.scroll_up--text {
-		font: var(--main-font);
-	}
-
-	h2.scroll_slide--text {
-		margin: var(--base-spacing) 0 0 0;
-		font: var(--slide-font);
+		max-width: 1200px;
+		height: 450px;
 	}
 
 	div.scroll_slide--line {
-		margin: var(--base-spacing) 0 0 0;
-		width: 150px;
-		height: 3px;
-		background-color: var(--danger-color);
+		width: 100px;
 	}
 
 	img.scroll_slide--image {
-		width: 300px;
+		width: 350px;
 	}
 }
