--- a/styles/style.css
+++ b/styles/style.css
@@ -40,6 +40,7 @@ body {
 	min-height: 100vh;
 	color: var(--dark-color);
 	background: var(--light-color);
+	scroll-behavior: smooth;
 }
 
 header.container,
